# Stirling

./: CMakeLists.txt  Stirling.sln
Sandbox/: Sandbox.vcxproj
Sandbox/Debug/Sandbox.tlog/: Sandbox.lastbuildstate
Sandbox/src/: SandboxApp.cpp
Stirling/: Stirling.vcxproj  Stirling.vcxproj.filters
Stirling/src/: Stirling.h
Stirling/src/Stirling/: Application.cpp  Application.h  Core.h  EntryPoint.h
include/: game.h
src/: game.cpp  main.cpp
